# async-rx

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/it/: batch_with.rs  main.rs  switch.rs
