[package]
name = "async-rx"
version = "0.1.3"
edition = "2021"
license = "MPL-2.0"
description = "Utility functions for async reactive programming."
repository = "https://github.com/jplatte/async-rx"
categories = ["asynchronous", "gui"]
keywords = ["async", "reactive"]

[features]
default = ["alloc"]
alloc = []

[dependencies]
futures-core = { version = "0.3.28", default-features = false }
pin-project-lite = "0.2.9"

[dev-dependencies]
futures-util = "0.3.28"
stream_assert = "0.1.0"
tokio = { version = "1.29.1", features = ["sync", "rt", "macros"] }
tokio-stream = "0.1.14"
